--- a/src/main/resources/assets/facility/lang/en_us.json
+++ b/src/main/resources/assets/facility/lang/en_us.json
@@ -1,4 +1,11 @@
 {
+	"config.facility.title": "Facility Configuration",
+	"config.facility.category.misc": "Miscellaneous",
+	"config.facility.value.shift_screens_left_if_rei_present": "Shift Screens Left for REI",
+	"config.facility.help.shift_screens_left_if_rei_present": "Gives more space for REI item display",
+	"config.facility.value.use_vanilla_fonts": "Use Vanilla Fonts ",
+	"config.facility.help.use_vanilla_fonts": "Use Minecraft font in storage screens",
+	
 	"tier.facility.utb1": "Universal Transport Bus - Category 1",
 	"tier.facility.utb1.desc": "Carries items & containerized fluids.",
 	"block.facility.utb1_flex": "Flexible Pipe - UTB.1",
