--- a/src/main/resources/assets/facility/lang/en_us.json
+++ b/src/main/resources/assets/facility/lang/en_us.json
@@ -3,8 +3,12 @@
 	"config.facility.category.misc": "Miscellaneous",
 	"config.facility.value.shift_screens_left_if_rei_present": "Shift Screens Left for REI",
 	"config.facility.help.shift_screens_left_if_rei_present": "Gives more space for REI item display",
-	"config.facility.value.use_vanilla_fonts": "Use Vanilla Fonts ",
+	"config.facility.value.use_vanilla_fonts": "Use Vanilla Fonts",
 	"config.facility.help.use_vanilla_fonts": "Use Minecraft font in storage screens",
+	"config.facility.value.utb_cat1_rate": "UTB-1 Transfer Rate",
+	"config.facility.help.utb_cat1_rate": "Max items transferred each tick;by category 1 universal transport bus",
+	"config.facility.value.utb_cat1_import_cooldown": "UTB-1 Importer Tick Frequency",
+	"config.facility.help.utb_cat1_import_cooldown": "Freqeuncy of transfers for UTB-1 Importer;1 = every tick, 20 = every second;Higher values may protect server performance",
 	
 	"tier.facility.utb1": "Universal Transport Bus - Category 1",
 	"tier.facility.utb1.desc": "Carries items & containerized fluids.",
