Rename Intake Adapter - > Storage To Bus Adapter

--- a/src/main/resources/assets/facility/lang/en_us.json
+++ b/src/main/resources/assets/facility/lang/en_us.json
@@ -16,8 +16,10 @@
 	"block.facility.utb1_flex.desc": "Connects in any direction.;More expensive",
 	"block.facility.utb1_straight": "Straight Pipe - UTB.1",
 	"block.facility.utb1_straight.desc": "Connects on either end.;Less expensive",
-	"block.facility.utb1_intake": "Intake Adapter - UTB.1",
+	"block.facility.utb1_intake": "Storage to Bus Adapter - UTB.1",
 	"block.facility.utb1_intake.desc": "Pulls items onto UTB1 carrier from a single block/side.",
+	"block.facility.utb1_export": "Storage to Bus Adapter - UTB.1",
+	"block.facility.utb1_export.desc": "Deposits items from UTB1 carrier into a single block/side.",
 	"block.facility.crate": "Crate - Standard",
 	"block.facility.crate.desc": "Holds 2048 items in any combination.;NOT compatible with hoppers.",
 	"block.facility.hyper_crate": "Hyper Crate",
