Localization, recpies and drops for new pipes

--- a/src/main/resources/assets/facility/lang/en_us.json
+++ b/src/main/resources/assets/facility/lang/en_us.json
@@ -16,12 +16,20 @@
 	"transport.facility.utb1.desc": "Carries items & containerized fluids.",
 	"block.facility.utb1_flex": "Flexible Pipe - UTB.1",
 	"block.facility.utb1_flex.desc": "Connects in any direction.;More expensive",
+	"block.facility.utb1_flex_g": "Flexible Pipe, Illuminated - UTB.1",
+	"block.facility.utb1_flex_g.desc": "Connects in any direction.;More expensive",
 	"block.facility.utb1_straight": "Straight Pipe - UTB.1",
 	"block.facility.utb1_straight.desc": "Connects on either end.;Less expensive",
+	"block.facility.utb1_straight_g": "Straight Pipe, Illuminated - UTB.1",
+	"block.facility.utb1_straight_g.desc": "Connects on either end.;Less expensive",
 	"block.facility.utb1_intake": "Storage to Bus Adapter - UTB.1",
 	"block.facility.utb1_intake.desc": "Pulls items onto UTB1 carrier from a single block/side.",
+	"block.facility.utb1_intake_g": "Storage to Bus Adapter, Illuminated - UTB.1",
+	"block.facility.utb1_intake_g.desc": "Pulls items onto UTB1 carrier from a single block/side.",
 	"block.facility.utb1_export": "Bus to Storage Adapter - UTB.1",
 	"block.facility.utb1_export.desc": "Deposits items from UTB1 carrier into a single block/side.",
+	"block.facility.utb1_export_g": "Bus to Storage Adapter, Illuminated - UTB.1",
+	"block.facility.utb1_export_g.desc": "Deposits items from UTB1 carrier into a single block/side.",
 	"block.facility.crate": "Crate - Standard",
 	"block.facility.crate.desc": "Holds 2048 items in any combination.;NOT compatible with hoppers.",
 	"block.facility.hyper_crate": "Hyper Crate",
